Fixed gap between image scroller div and margin blurs on chrome

--- a/src/page/projects/components/image-scroller.module.css
+++ b/src/page/projects/components/image-scroller.module.css
@@ -16,15 +16,15 @@
 	width: 100%;
 }
 .images-overlay-div {
-	content: '';
-
 	position: absolute;
 	left: 0; top: 0;
 	z-index: 1;
 	width: 100%;
 	height: 100%;
 
-	box-shadow: inset 2.25em 0 0.25em -2em var(--background-color), inset -2.25em 0 0.25em -2em var(--background-color);
+	padding: 0 0.25em;
+	margin: 0 -0.25em;
+	box-shadow: inset 2.5em 0 0.25em -2em var(--background-color), inset -2.5em 0 0.25em -2em var(--background-color);
 
 	pointer-events: none;
 }
